--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Donatella Genovese"
 author: "Donatella Genovese"
-description: ""
+description: "Made by Donatella Genovese"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
@@ -8,9 +8,9 @@ date_format: "%B %d, %Y"
 
 # Layout
 
-show_excerpts: true        # show article excerpts on the home page
-show_frame: true           # adds a gray frame to the site
-show_sidebar: false        # show a sidebar instead of the usual header
+show_excerpts: false       # show article excerpts on the home page
+show_frame: true         # adds a gray frame to the site
+show_sidebar: false       # show a sidebar instead of the usual header
 minimal: false           # use a dark header
 
 # Menu
