--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ show_social: true
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "home change", icon: Home}
+  - {file: "index.html", title: "home change", icon: home}
   - {file: "README.md", title:"About me", icon: address-card}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
