--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ show_social: true
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "home change", icon: home}
-  - {file: "README.md", title:"About me", icon: address-card}
+  - {file: "index.html"}
+  - {file: "README.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:donatella.genovese97@gmail.com"}
