--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,9 @@ show_social: true
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "Home"}
-  - {file: "README.md", title: "About me"}
+  - {file: "curriculum.pdf", title: "CV"}
+  - {file: "README.md", title: "About me", icon: home}
+  - {title: "Blog", url: https://github.com/DonatellaGen}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:donatella.genovese97@gmail.com"}
