--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ show_social: true
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "curriculum.pdf", title: "CV"}
-  - {file: "README.md", title: "About me", icon: home}
+  - {file: "README.md", title: "About me"}
   - {title: "Blog", url: "https://github.com/DonatellaGen"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
